Fix scrollbar in view menu for IE8

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -34,7 +34,7 @@ div.circle {
 .scrollable-menu {
     height: auto;
     max-height: 400px;
-    overflow-x: hidden;
+    overflow: auto;
 }
 
 .monospace {
